# bioiain

./: .gitignore  Monokai.sublime-color-scheme  PyPI_instructions.txt  README.md  bashrc.project  env.yaml  env12.yaml  env_conda.txt  env_pip.txt  environment-conda-only.txt  environment.txt  environment.yml  pyproject.toml  pypy_instructions.txt  requirements.txt  setup.py
src/bioiain/: __init__.py
src/bioiain/aleph/: ALEPH2.py  __init__.py  fragments.py  vectors.py
src/bioiain/aleph/core/: ALEPH.py  Bioinformatics.py  Grid.py  SystemUtility.py  __init__.py
src/bioiain/base/: __init__.py  atom.py  chain.py  entity.py  ligand.py  mmcif.py  residue.py  structure.py
src/bioiain/biopython/: DSSP.py  SASA.py  __init__.py  atom.py  base.py  chain.py  imports.py  model.py  residue.py  structure.py
src/bioiain/machine/: __init__.py  base_model.py  datasets.py  embeddings.py  flows.py  layers.py  losses.py  models.py
src/bioiain/symmetries/: __init__.py  crystal.py  elements.py  interactions.py  oligo.py  oligomer.py  operations.py  parsing.py  space_groups.py
src/bioiain/tools/: DSSP.py  PISA.py  PLINDER.py  SASA.py  __init__.py
src/bioiain/utilities/: DSSP.py  __init__.py  entities.py  exceptions.py  files.py  logging.py  maths.py  maths_old.py  parallel.py  prints.py  sequences.py  strings.py  utilities_old.py
src/bioiain/visualisation/: __init__.py  plots.py  pymol.py  pymol_old.py
test/: .temp_pymol_script.py  1M2Z.cif  AF-P04150-12-F1-model_v6.cif  aleph.py  deprecated_pipeline_v1.py  ligands.py  mmseqs_test.py  pdb_list.txt  plinder_test.py  refactor.py  scratch.py  split_monomers.py  test.py  test_list_(pdb).txt
test/data/: LBDs.txt  cath-dataset-nonredundant-S20.list  cath-dataset-nonredundant-S20.monomeric.list  cath-dataset-nonredundant-S20.multimeric.list  cath-dataset-nonredundant-S20.nopisa.list  consensus.txt
