[build-system]
requires = [
    "setuptools >= 80.10.1",
]
build-backend = "setuptools.build_meta"



[project]

dependencies = [
    "numpy >= 2.4.2",
    "biopython >= 1.86",
    "pandas >= 2.3.3",
    "matplotlib >= 3.10.8",
    "scikit-learn >= 1.8.0",
    "scipy >= 1.17.0",

    "typing-extensions >= 4.15.0",
    "requests >= 2.32.5",
    "unidecode >= 1.4.0",
    "xmltodict >= 0.14.2",
    "seaborn",
    "psutil"
]

name = "bioiain"
version = "0.1.0"
authors = [
  { name="Iain Visa", email="iainvisa@gmail.com" },
]
description = "Package for structural analysis of proteins"
readme = "README.md"
requires-python = ">=3.12"


classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "biopython",
    "bio",
    "structural",
    "biology",
    "machine learning",
    "crystallography",
    "protein",
    "symmetry",
    "ligand"
]

[project.urls]
Homepage = "https://github.com/Thecnopapa/bioiain"
Issues = "https://github.com/Thecnopapa/bioiain/issues"

[project.optional-dependencies]
conda = [
    "foldseek", #bioconda::foldseek
    "pymol-open-source", #conda-forge::pymol-open-source
    "clustalw", #bioconda::clustalw
    "mmseqs2"
]
ml = [
    "torch",
    "torchvision",
    "transformers",
    "tensorboard"
]
aleph = [
    "future",
    "termcolor",
    "igraph"
]
db = [
    "plinder"
]


